# IP-Projects

./: README.md  point.hh  vrn_station_oo.tar
Uebung 10/: A1_test.txt  Aufgabe1.cc  Aufgabe1.out  Aufgabe2.cc
Uebung 11/Aufgabe1/: Aufgabe1.out  Polynomial.hh  SimpleArray.hh  main.cc
Uebung 11/Aufgabe2/: Aufgabe2.out  Math_Vector.hh  main.cc
Uebung 11/Aufgabe3/: Aufgabe3.out  Trapezregel.hh  main.cc
Uebung 4/: Aufgabe_1a.cc  Aufgabe_1b.cc  Aufgabe_2.cc
Uebung 5/: Aufgabe.out  Aufgabe2.cc  Aufgabe2.out  Aufgabe3.cc  Aufgabe3.out  a.out
Uebung 6/: Aufgabe2a.cc  Aufgabe2a.out  Aufgabe3.cc  Aufgabe3.out
Uebung 7/: Aufgabe2a.txt  Aufgabe2b.cc  Aufgabe2b.out  Aufgabe3a.cc  Aufgabe3a.out  Aufgabe3b.cc  Aufgabe3b.out
Uebung 8/: Aufgabe2.cc  Aufgabe2.out
Uebung 9/Weinachtsbaum/: Weinachtsbaum.ppm  ppmDrawing.hh  weinachtsbaum.cc  weinachtsbaum_Creator.out
Uebung 9/gameoflife/: gameoflife.cc  gameoflife.out
Uebung 9/mandelbrot/: canvas.hh  mandelbrot.cc  mandelbrot_creator.out
iii/vorlage_src/: CMakeLists.txt  stations.hh  vrn_station_distance.cc
iii/vorlage_src/include/: request.hh  stations.hh
temp/: uebung04_02.tar.xz
temp/vorlage_src/: vrn_station_distance.cc
temp/vorlage_src/include/: stations.hh
